fixing width overflow-x with scrollbars

--- a/doc-gen/style/main.scss
+++ b/doc-gen/style/main.scss
@@ -19,7 +19,7 @@ body {
 	}
 	
 	#class-page {
-		width: 100vw;
+		width: 100%;
 		height: 100vh;
 		margin: 0px;
 		display: flex;
