--- a/doc-gen/style/topbar.scss
+++ b/doc-gen/style/topbar.scss
@@ -3,7 +3,6 @@ $topbarHeight: 40px;
 
 #topbar {
 	height: $topbarHeight;
-	width: 100%;
 	padding: 20px;
 	padding-bottom: 0px;
 	font-size: 1.2em;
